<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smamine.tshirapp.ui.InscriptionActivityFragment"
    tools:showIn="@layout/activity_inscription"
    android:background="@drawable/bbb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <com.andreabaccega.widget.FormEditText
            android:id="@+id/first_name"
            android:hint="@string/first_name"
            whatever:testType="nocheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            whatever:emptyErrorString="@string/your_name_cannot_be_empty"
            />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Spinner
            android:id="@+id/willaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />

    </LinearLayout>


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/continue_text"
        />


</RelativeLayout>
