<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:padding="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smamine.tshirapp.ui.UpadteProfile"
    tools:showIn="@layout/activity_upadte_profile"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_weight=".2"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />
        <com.andreabaccega.widget.FormEditText
            android:id="@+id/phone"
            whatever:testType="phone"
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            whatever:emptyErrorString="@string/your_phone_cannot_be_empty"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/willaya"
            android:layout_weight=".2"
            android:textColor="@color/white"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/willaya"
            android:layout_weight=".8"

            />
    </LinearLayout>

</LinearLayout>
