<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.smamine.tshirapp.ui.UserDetails"
    tools:showIn="@layout/activity_user_details">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_weight=".2"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:id="@+id/first_name"
            android:layout_weight=".8"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_weight=".2"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:id="@+id/last_name"
            android:layout_weight=".8"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_weight=".2"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:id="@+id/phone"
            android:layout_weight=".8"
            android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/willaya"
            android:layout_weight=".2"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:id="@+id/willaya"
            android:layout_weight=".8"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>


</android.support.v4.widget.NestedScrollView>
