<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="com.smamine.tshirapp.ui.OrderRecapActivity"
    android:background="@drawable/bbb">
<com.facebook.share.widget.ShareButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/share"
    android:layout_alignParentTop="true"
    android:layout_alignRight="@+id/grid_view"
    android:layout_alignEnd="@+id/grid_view" />
    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:layout_above="@+id/quantity"
        android:layout_below="@+id/share"></GridView>

    <com.andreabaccega.widget.FormEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quantity"
        whatever:testType="numeric"
        android:layout_above="@+id/create"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Quantity"
        android:textColor="@color/white"
        android:inputType="number"
        android:textColorHint="@color/white"
        whatever:emptyErrorString="@string/your_quantity_cannot_be_empty"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/create"
        android:text="@string/order"
        android:layout_alignTop="@+id/cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/cancel"
        android:layout_toStartOf="@+id/cancel" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
